newpypddl/pypddl-translator/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> pddl
Rule 1     pddl -> domain
Rule 2     pddl -> problem
Rule 3     pddl -> domain problem
Rule 4     domain -> LPAREN DEFINE_KEY domain_def require_def types_def constants_def predicates_def action_def_lst RPAREN
Rule 5     domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
Rule 6     domain -> LPAREN DEFINE_KEY domain_def require_def constants_def predicates_def action_def_lst RPAREN
Rule 7     domain -> LPAREN DEFINE_KEY domain_def require_def predicates_def action_def_lst RPAREN
Rule 8     domain_def -> LPAREN DOMAIN_KEY NAME RPAREN
Rule 9     require_def -> LPAREN REQUIREMENTS_KEY require_key_lst RPAREN
Rule 10    require_key_lst -> require_key require_key_lst
Rule 11    require_key_lst -> require_key
Rule 12    require_key -> STRIPS_KEY
Rule 13    require_key -> EQUALITY_KEY
Rule 14    require_key -> TYPING_KEY
Rule 15    require_key -> PROBABILISTIC_EFFECTS_KEY
Rule 16    types_def -> LPAREN TYPES_KEY typed_names_lst RPAREN
Rule 17    constants_def -> LPAREN CONSTANTS_KEY typed_names_lst RPAREN
Rule 18    typed_names_lst -> names_lst HYPHEN type typed_names_lst
Rule 19    typed_names_lst -> names_lst HYPHEN type
Rule 20    typed_names_lst -> names_lst
Rule 21    predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst RPAREN
Rule 22    predicate_def_lst -> predicate_def predicate_def_lst
Rule 23    predicate_def_lst -> predicate_def
Rule 24    predicate_def -> LPAREN NAME typed_variables_lst RPAREN
Rule 25    predicate_def -> LPAREN NAME variables_lst RPAREN
Rule 26    predicate_def -> LPAREN NAME RPAREN
Rule 27    action_def_lst -> action_def action_def_lst
Rule 28    action_def_lst -> action_def
Rule 29    action_def -> LPAREN ACTION_KEY NAME parameters_def action_def_body RPAREN
Rule 30    parameters_def -> PARAMETERS_KEY LPAREN typed_variables_lst RPAREN
Rule 31    parameters_def -> PARAMETERS_KEY LPAREN variables_lst RPAREN
Rule 32    parameters_def -> PARAMETERS_KEY LPAREN RPAREN
Rule 33    action_def_body -> precond_def effects_def
Rule 34    precond_def -> PRECONDITION_KEY LPAREN AND_KEY literals_lst RPAREN
Rule 35    precond_def -> PRECONDITION_KEY literal
Rule 36    effects_def -> EFFECT_KEY effect_body
Rule 37    effect_body -> LPAREN NAME unlabeled_effect RPAREN
Rule 38    effect_body -> effect_body LPAREN NAME unlabeled_effect RPAREN
Rule 39    effect_body -> unlabeled_effect
Rule 40    unlabeled_effect -> LPAREN ONEOF_KEY effect_body RPAREN
Rule 41    unlabeled_effect -> deterministic_effect unlabeled_effect
Rule 42    unlabeled_effect -> deterministic_effect
Rule 43    deterministic_effect -> LPAREN AND_KEY effects_lst RPAREN
Rule 44    deterministic_effect -> effects_lst
Rule 45    when_effects -> when_if when_then
Rule 46    when_if -> simple_effect
Rule 47    when_if -> LPAREN AND_KEY simple_effects_lst RPAREN
Rule 48    when_then -> simple_effect
Rule 49    when_then -> LPAREN AND_KEY simple_effects_lst RPAREN
Rule 50    effects_lst -> effect effects_lst
Rule 51    effects_lst -> effect
Rule 52    simple_effects_lst -> simple_effect simple_effects_lst
Rule 53    simple_effects_lst -> simple_effect
Rule 54    effect -> literal
Rule 55    effect -> LPAREN PROBABILISTIC_KEY PROBABILITY literal RPAREN
Rule 56    effect -> LPAREN WHEN_KEY when_effects RPAREN
Rule 57    simple_effect -> literal
Rule 58    literals_lst -> literal literals_lst
Rule 59    literals_lst -> literal
Rule 60    literals_lst -> or_literal literals_lst
Rule 61    literals_lst -> or_literal
Rule 62    literals_lst -> and_literal literals_lst
Rule 63    literals_lst -> and_literal
Rule 64    and_literal -> LPAREN AND_KEY literals_lst RPAREN
Rule 65    and_literal -> literal
Rule 66    or_literal -> LPAREN OR_KEY literals_lst RPAREN
Rule 67    or_literal -> literal
Rule 68    literal -> LPAREN NOT_KEY predicate RPAREN
Rule 69    literal -> predicate
Rule 70    ground_predicates_lst -> ground_predicate ground_predicates_lst
Rule 71    ground_predicates_lst -> ground_predicate
Rule 72    predicate -> LPAREN NAME variables_lst RPAREN
Rule 73    predicate -> LPAREN EQUALS VARIABLE VARIABLE RPAREN
Rule 74    predicate -> LPAREN NAME RPAREN
Rule 75    predicate -> LPAREN NAME constants_lst RPAREN
Rule 76    ground_predicate -> LPAREN NAME constants_lst RPAREN
Rule 77    ground_predicate -> LPAREN NAME RPAREN
Rule 78    typed_constants_lst -> constants_lst HYPHEN type typed_constants_lst
Rule 79    typed_constants_lst -> constants_lst HYPHEN type
Rule 80    typed_variables_lst -> variables_lst HYPHEN type typed_variables_lst
Rule 81    typed_variables_lst -> variables_lst HYPHEN type
Rule 82    constants_lst -> constant constants_lst
Rule 83    constants_lst -> constant
Rule 84    variables_lst -> variable variables_lst
Rule 85    variables_lst -> variable
Rule 86    names_lst -> NAME names_lst
Rule 87    names_lst -> NAME
Rule 88    type -> NAME
Rule 89    constant -> NAME
Rule 90    variable -> VARIABLE
Rule 91    problem -> plan_problem
Rule 92    plan_problem -> LPAREN DEFINE_KEY plan_problem_def domain_def objects_def init_def goal_def RPAREN
Rule 93    plan_problem -> LPAREN DEFINE_KEY plan_problem_def domain_def init_def goal_def RPAREN
Rule 94    plan_problem_def -> LPAREN PROBLEM_KEY NAME RPAREN
Rule 95    objects_def -> LPAREN OBJECTS_KEY typed_constants_lst RPAREN
Rule 96    objects_def -> LPAREN OBJECTS_KEY constants_lst RPAREN
Rule 97    init_def -> LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
Rule 98    init_def -> LPAREN INIT_KEY ground_predicates_lst RPAREN
Rule 99    goal_def -> LPAREN GOAL_KEY LPAREN AND_KEY literals_lst RPAREN RPAREN
Rule 100   goal_def -> LPAREN GOAL_KEY literal RPAREN
Rule 101   goal_def -> LPAREN GOAL_KEY LPAREN ONEOF_KEY effect_body RPAREN RPAREN

Terminals, with rules where they appear

ACTION_KEY           : 29
AND_KEY              : 34 43 47 49 64 97 99
CONSTANTS_KEY        : 17
DEFINE_KEY           : 4 5 6 7 92 93
DOMAIN_KEY           : 8
EFFECT_KEY           : 36
EQUALITY_KEY         : 13
EQUALS               : 73
GOAL_KEY             : 99 100 101
HYPHEN               : 18 19 78 79 80 81
INIT_KEY             : 97 98
LPAREN               : 4 5 6 7 8 9 16 17 21 24 25 26 29 30 31 32 34 37 38 40 43 47 49 55 56 64 66 68 72 73 74 75 76 77 92 93 94 95 96 97 97 98 99 99 100 101 101
NAME                 : 8 24 25 26 29 37 38 72 74 75 76 77 86 87 88 89 94
NOT_KEY              : 68
OBJECTS_KEY          : 95 96
ONEOF_KEY            : 40 101
OR_KEY               : 66
PARAMETERS_KEY       : 30 31 32
PRECONDITION_KEY     : 34 35
PREDICATES_KEY       : 21
PROBABILISTIC_EFFECTS_KEY : 15
PROBABILISTIC_KEY    : 55
PROBABILITY          : 55
PROBLEM_KEY          : 94
REQUIREMENTS_KEY     : 9
RPAREN               : 4 5 6 7 8 9 16 17 21 24 25 26 29 30 31 32 34 37 38 40 43 47 49 55 56 64 66 68 72 73 74 75 76 77 92 93 94 95 96 97 97 98 99 99 100 101 101
STRIPS_KEY           : 12
TYPES_KEY            : 16
TYPING_KEY           : 14
VARIABLE             : 73 73 90
WHEN_KEY             : 56
error                : 

Nonterminals, with rules where they appear

action_def           : 27 28
action_def_body      : 29
action_def_lst       : 4 5 6 7 27
and_literal          : 62 63
constant             : 82 83
constants_def        : 4 6
constants_lst        : 75 76 78 79 82 96
deterministic_effect : 41 42
domain               : 1 3
domain_def           : 4 5 6 7 92 93
effect               : 50 51
effect_body          : 36 38 40 101
effects_def          : 33
effects_lst          : 43 44 50
goal_def             : 92 93
ground_predicate     : 70 71
ground_predicates_lst : 70 97 98
init_def             : 92 93
literal              : 35 54 55 57 58 59 65 67 100
literals_lst         : 34 58 60 62 64 66 99
names_lst            : 18 19 20 86
objects_def          : 92
or_literal           : 60 61
parameters_def       : 29
pddl                 : 0
plan_problem         : 91
plan_problem_def     : 92 93
precond_def          : 33
predicate            : 68 69
predicate_def        : 22 23
predicate_def_lst    : 21 22
predicates_def       : 4 5 6 7
problem              : 2 3
require_def          : 4 5 6 7
require_key          : 10 11
require_key_lst      : 9 10
simple_effect        : 46 48 52 53
simple_effects_lst   : 47 49 52
type                 : 18 19 78 79 80 81
typed_constants_lst  : 78 95
typed_names_lst      : 16 17 18
typed_variables_lst  : 24 30 80
types_def            : 4 5
unlabeled_effect     : 37 38 39 41
variable             : 84 85
variables_lst        : 25 31 72 80 81 84
when_effects         : 56
when_if              : 45
when_then            : 45

Parsing method: LALR

state 0

    (0) S' -> . pddl
    (1) pddl -> . domain
    (2) pddl -> . problem
    (3) pddl -> . domain problem
    (4) domain -> . LPAREN DEFINE_KEY domain_def require_def types_def constants_def predicates_def action_def_lst RPAREN
    (5) domain -> . LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
    (6) domain -> . LPAREN DEFINE_KEY domain_def require_def constants_def predicates_def action_def_lst RPAREN
    (7) domain -> . LPAREN DEFINE_KEY domain_def require_def predicates_def action_def_lst RPAREN
    (91) problem -> . plan_problem
    (92) plan_problem -> . LPAREN DEFINE_KEY plan_problem_def domain_def objects_def init_def goal_def RPAREN
    (93) plan_problem -> . LPAREN DEFINE_KEY plan_problem_def domain_def init_def goal_def RPAREN

    LPAREN          shift and go to state 4

    pddl                           shift and go to state 1
    domain                         shift and go to state 2
    problem                        shift and go to state 3
    plan_problem                   shift and go to state 5

state 1

    (0) S' -> pddl .



state 2

    (1) pddl -> domain .
    (3) pddl -> domain . problem
    (91) problem -> . plan_problem
    (92) plan_problem -> . LPAREN DEFINE_KEY plan_problem_def domain_def objects_def init_def goal_def RPAREN
    (93) plan_problem -> . LPAREN DEFINE_KEY plan_problem_def domain_def init_def goal_def RPAREN

    $end            reduce using rule 1 (pddl -> domain .)
    LPAREN          shift and go to state 7

    problem                        shift and go to state 6
    plan_problem                   shift and go to state 5

state 3

    (2) pddl -> problem .

    $end            reduce using rule 2 (pddl -> problem .)


state 4

    (4) domain -> LPAREN . DEFINE_KEY domain_def require_def types_def constants_def predicates_def action_def_lst RPAREN
    (5) domain -> LPAREN . DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
    (6) domain -> LPAREN . DEFINE_KEY domain_def require_def constants_def predicates_def action_def_lst RPAREN
    (7) domain -> LPAREN . DEFINE_KEY domain_def require_def predicates_def action_def_lst RPAREN
    (92) plan_problem -> LPAREN . DEFINE_KEY plan_problem_def domain_def objects_def init_def goal_def RPAREN
    (93) plan_problem -> LPAREN . DEFINE_KEY plan_problem_def domain_def init_def goal_def RPAREN

    DEFINE_KEY      shift and go to state 8


state 5

    (91) problem -> plan_problem .

    $end            reduce using rule 91 (problem -> plan_problem .)


state 6

    (3) pddl -> domain problem .

    $end            reduce using rule 3 (pddl -> domain problem .)


state 7

    (92) plan_problem -> LPAREN . DEFINE_KEY plan_problem_def domain_def objects_def init_def goal_def RPAREN
    (93) plan_problem -> LPAREN . DEFINE_KEY plan_problem_def domain_def init_def goal_def RPAREN

    DEFINE_KEY      shift and go to state 9


state 8

    (4) domain -> LPAREN DEFINE_KEY . domain_def require_def types_def constants_def predicates_def action_def_lst RPAREN
    (5) domain -> LPAREN DEFINE_KEY . domain_def require_def types_def predicates_def action_def_lst RPAREN
    (6) domain -> LPAREN DEFINE_KEY . domain_def require_def constants_def predicates_def action_def_lst RPAREN
    (7) domain -> LPAREN DEFINE_KEY . domain_def require_def predicates_def action_def_lst RPAREN
    (92) plan_problem -> LPAREN DEFINE_KEY . plan_problem_def domain_def objects_def init_def goal_def RPAREN
    (93) plan_problem -> LPAREN DEFINE_KEY . plan_problem_def domain_def init_def goal_def RPAREN
    (8) domain_def -> . LPAREN DOMAIN_KEY NAME RPAREN
    (94) plan_problem_def -> . LPAREN PROBLEM_KEY NAME RPAREN

    LPAREN          shift and go to state 10

    domain_def                     shift and go to state 11
    plan_problem_def               shift and go to state 12

state 9

    (92) plan_problem -> LPAREN DEFINE_KEY . plan_problem_def domain_def objects_def init_def goal_def RPAREN
    (93) plan_problem -> LPAREN DEFINE_KEY . plan_problem_def domain_def init_def goal_def RPAREN
    (94) plan_problem_def -> . LPAREN PROBLEM_KEY NAME RPAREN

    LPAREN          shift and go to state 13

    plan_problem_def               shift and go to state 12

state 10

    (8) domain_def -> LPAREN . DOMAIN_KEY NAME RPAREN
    (94) plan_problem_def -> LPAREN . PROBLEM_KEY NAME RPAREN

    DOMAIN_KEY      shift and go to state 14
    PROBLEM_KEY     shift and go to state 15


state 11

    (4) domain -> LPAREN DEFINE_KEY domain_def . require_def types_def constants_def predicates_def action_def_lst RPAREN
    (5) domain -> LPAREN DEFINE_KEY domain_def . require_def types_def predicates_def action_def_lst RPAREN
    (6) domain -> LPAREN DEFINE_KEY domain_def . require_def constants_def predicates_def action_def_lst RPAREN
    (7) domain -> LPAREN DEFINE_KEY domain_def . require_def predicates_def action_def_lst RPAREN
    (9) require_def -> . LPAREN REQUIREMENTS_KEY require_key_lst RPAREN

    LPAREN          shift and go to state 16

    require_def                    shift and go to state 17

state 12

    (92) plan_problem -> LPAREN DEFINE_KEY plan_problem_def . domain_def objects_def init_def goal_def RPAREN
    (93) plan_problem -> LPAREN DEFINE_KEY plan_problem_def . domain_def init_def goal_def RPAREN
    (8) domain_def -> . LPAREN DOMAIN_KEY NAME RPAREN

    LPAREN          shift and go to state 18

    domain_def                     shift and go to state 19

state 13

    (94) plan_problem_def -> LPAREN . PROBLEM_KEY NAME RPAREN

    PROBLEM_KEY     shift and go to state 15


state 14

    (8) domain_def -> LPAREN DOMAIN_KEY . NAME RPAREN

    NAME            shift and go to state 20


state 15

    (94) plan_problem_def -> LPAREN PROBLEM_KEY . NAME RPAREN

    NAME            shift and go to state 21


state 16

    (9) require_def -> LPAREN . REQUIREMENTS_KEY require_key_lst RPAREN

    REQUIREMENTS_KEY shift and go to state 22


state 17

    (4) domain -> LPAREN DEFINE_KEY domain_def require_def . types_def constants_def predicates_def action_def_lst RPAREN
    (5) domain -> LPAREN DEFINE_KEY domain_def require_def . types_def predicates_def action_def_lst RPAREN
    (6) domain -> LPAREN DEFINE_KEY domain_def require_def . constants_def predicates_def action_def_lst RPAREN
    (7) domain -> LPAREN DEFINE_KEY domain_def require_def . predicates_def action_def_lst RPAREN
    (16) types_def -> . LPAREN TYPES_KEY typed_names_lst RPAREN
    (17) constants_def -> . LPAREN CONSTANTS_KEY typed_names_lst RPAREN
    (21) predicates_def -> . LPAREN PREDICATES_KEY predicate_def_lst RPAREN

    LPAREN          shift and go to state 23

    types_def                      shift and go to state 24
    constants_def                  shift and go to state 25
    predicates_def                 shift and go to state 26

state 18

    (8) domain_def -> LPAREN . DOMAIN_KEY NAME RPAREN

    DOMAIN_KEY      shift and go to state 14


state 19

    (92) plan_problem -> LPAREN DEFINE_KEY plan_problem_def domain_def . objects_def init_def goal_def RPAREN
    (93) plan_problem -> LPAREN DEFINE_KEY plan_problem_def domain_def . init_def goal_def RPAREN
    (95) objects_def -> . LPAREN OBJECTS_KEY typed_constants_lst RPAREN
    (96) objects_def -> . LPAREN OBJECTS_KEY constants_lst RPAREN
    (97) init_def -> . LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (98) init_def -> . LPAREN INIT_KEY ground_predicates_lst RPAREN

    LPAREN          shift and go to state 27

    objects_def                    shift and go to state 28
    init_def                       shift and go to state 29

state 20

    (8) domain_def -> LPAREN DOMAIN_KEY NAME . RPAREN

    RPAREN          shift and go to state 30


state 21

    (94) plan_problem_def -> LPAREN PROBLEM_KEY NAME . RPAREN

    RPAREN          shift and go to state 31


state 22

    (9) require_def -> LPAREN REQUIREMENTS_KEY . require_key_lst RPAREN
    (10) require_key_lst -> . require_key require_key_lst
    (11) require_key_lst -> . require_key
    (12) require_key -> . STRIPS_KEY
    (13) require_key -> . EQUALITY_KEY
    (14) require_key -> . TYPING_KEY
    (15) require_key -> . PROBABILISTIC_EFFECTS_KEY

    STRIPS_KEY      shift and go to state 34
    EQUALITY_KEY    shift and go to state 35
    TYPING_KEY      shift and go to state 36
    PROBABILISTIC_EFFECTS_KEY shift and go to state 37

    require_key_lst                shift and go to state 32
    require_key                    shift and go to state 33

state 23

    (16) types_def -> LPAREN . TYPES_KEY typed_names_lst RPAREN
    (17) constants_def -> LPAREN . CONSTANTS_KEY typed_names_lst RPAREN
    (21) predicates_def -> LPAREN . PREDICATES_KEY predicate_def_lst RPAREN

    TYPES_KEY       shift and go to state 38
    CONSTANTS_KEY   shift and go to state 39
    PREDICATES_KEY  shift and go to state 40


state 24

    (4) domain -> LPAREN DEFINE_KEY domain_def require_def types_def . constants_def predicates_def action_def_lst RPAREN
    (5) domain -> LPAREN DEFINE_KEY domain_def require_def types_def . predicates_def action_def_lst RPAREN
    (17) constants_def -> . LPAREN CONSTANTS_KEY typed_names_lst RPAREN
    (21) predicates_def -> . LPAREN PREDICATES_KEY predicate_def_lst RPAREN

    LPAREN          shift and go to state 41

    constants_def                  shift and go to state 42
    predicates_def                 shift and go to state 43

state 25

    (6) domain -> LPAREN DEFINE_KEY domain_def require_def constants_def . predicates_def action_def_lst RPAREN
    (21) predicates_def -> . LPAREN PREDICATES_KEY predicate_def_lst RPAREN

    LPAREN          shift and go to state 44

    predicates_def                 shift and go to state 45

state 26

    (7) domain -> LPAREN DEFINE_KEY domain_def require_def predicates_def . action_def_lst RPAREN
    (27) action_def_lst -> . action_def action_def_lst
    (28) action_def_lst -> . action_def
    (29) action_def -> . LPAREN ACTION_KEY NAME parameters_def action_def_body RPAREN

    LPAREN          shift and go to state 46

    action_def_lst                 shift and go to state 47
    action_def                     shift and go to state 48

state 27

    (95) objects_def -> LPAREN . OBJECTS_KEY typed_constants_lst RPAREN
    (96) objects_def -> LPAREN . OBJECTS_KEY constants_lst RPAREN
    (97) init_def -> LPAREN . INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (98) init_def -> LPAREN . INIT_KEY ground_predicates_lst RPAREN

    OBJECTS_KEY     shift and go to state 49
    INIT_KEY        shift and go to state 50


state 28

    (92) plan_problem -> LPAREN DEFINE_KEY plan_problem_def domain_def objects_def . init_def goal_def RPAREN
    (97) init_def -> . LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (98) init_def -> . LPAREN INIT_KEY ground_predicates_lst RPAREN

    LPAREN          shift and go to state 51

    init_def                       shift and go to state 52

state 29

    (93) plan_problem -> LPAREN DEFINE_KEY plan_problem_def domain_def init_def . goal_def RPAREN
    (99) goal_def -> . LPAREN GOAL_KEY LPAREN AND_KEY literals_lst RPAREN RPAREN
    (100) goal_def -> . LPAREN GOAL_KEY literal RPAREN
    (101) goal_def -> . LPAREN GOAL_KEY LPAREN ONEOF_KEY effect_body RPAREN RPAREN

    LPAREN          shift and go to state 53

    goal_def                       shift and go to state 54

state 30

    (8) domain_def -> LPAREN DOMAIN_KEY NAME RPAREN .

    LPAREN          reduce using rule 8 (domain_def -> LPAREN DOMAIN_KEY NAME RPAREN .)


state 31

    (94) plan_problem_def -> LPAREN PROBLEM_KEY NAME RPAREN .

    LPAREN          reduce using rule 94 (plan_problem_def -> LPAREN PROBLEM_KEY NAME RPAREN .)


state 32

    (9) require_def -> LPAREN REQUIREMENTS_KEY require_key_lst . RPAREN

    RPAREN          shift and go to state 55


state 33

    (10) require_key_lst -> require_key . require_key_lst
    (11) require_key_lst -> require_key .
    (10) require_key_lst -> . require_key require_key_lst
    (11) require_key_lst -> . require_key
    (12) require_key -> . STRIPS_KEY
    (13) require_key -> . EQUALITY_KEY
    (14) require_key -> . TYPING_KEY
    (15) require_key -> . PROBABILISTIC_EFFECTS_KEY

    RPAREN          reduce using rule 11 (require_key_lst -> require_key .)
    STRIPS_KEY      shift and go to state 34
    EQUALITY_KEY    shift and go to state 35
    TYPING_KEY      shift and go to state 36
    PROBABILISTIC_EFFECTS_KEY shift and go to state 37

    require_key                    shift and go to state 33
    require_key_lst                shift and go to state 56

state 34

    (12) require_key -> STRIPS_KEY .

    STRIPS_KEY      reduce using rule 12 (require_key -> STRIPS_KEY .)
    EQUALITY_KEY    reduce using rule 12 (require_key -> STRIPS_KEY .)
    TYPING_KEY      reduce using rule 12 (require_key -> STRIPS_KEY .)
    PROBABILISTIC_EFFECTS_KEY reduce using rule 12 (require_key -> STRIPS_KEY .)
    RPAREN          reduce using rule 12 (require_key -> STRIPS_KEY .)


state 35

    (13) require_key -> EQUALITY_KEY .

    STRIPS_KEY      reduce using rule 13 (require_key -> EQUALITY_KEY .)
    EQUALITY_KEY    reduce using rule 13 (require_key -> EQUALITY_KEY .)
    TYPING_KEY      reduce using rule 13 (require_key -> EQUALITY_KEY .)
    PROBABILISTIC_EFFECTS_KEY reduce using rule 13 (require_key -> EQUALITY_KEY .)
    RPAREN          reduce using rule 13 (require_key -> EQUALITY_KEY .)


state 36

    (14) require_key -> TYPING_KEY .

    STRIPS_KEY      reduce using rule 14 (require_key -> TYPING_KEY .)
    EQUALITY_KEY    reduce using rule 14 (require_key -> TYPING_KEY .)
    TYPING_KEY      reduce using rule 14 (require_key -> TYPING_KEY .)
    PROBABILISTIC_EFFECTS_KEY reduce using rule 14 (require_key -> TYPING_KEY .)
    RPAREN          reduce using rule 14 (require_key -> TYPING_KEY .)


state 37

    (15) require_key -> PROBABILISTIC_EFFECTS_KEY .

    STRIPS_KEY      reduce using rule 15 (require_key -> PROBABILISTIC_EFFECTS_KEY .)
    EQUALITY_KEY    reduce using rule 15 (require_key -> PROBABILISTIC_EFFECTS_KEY .)
    TYPING_KEY      reduce using rule 15 (require_key -> PROBABILISTIC_EFFECTS_KEY .)
    PROBABILISTIC_EFFECTS_KEY reduce using rule 15 (require_key -> PROBABILISTIC_EFFECTS_KEY .)
    RPAREN          reduce using rule 15 (require_key -> PROBABILISTIC_EFFECTS_KEY .)


state 38

    (16) types_def -> LPAREN TYPES_KEY . typed_names_lst RPAREN
    (18) typed_names_lst -> . names_lst HYPHEN type typed_names_lst
    (19) typed_names_lst -> . names_lst HYPHEN type
    (20) typed_names_lst -> . names_lst
    (86) names_lst -> . NAME names_lst
    (87) names_lst -> . NAME

    NAME            shift and go to state 59

    typed_names_lst                shift and go to state 57
    names_lst                      shift and go to state 58

state 39

    (17) constants_def -> LPAREN CONSTANTS_KEY . typed_names_lst RPAREN
    (18) typed_names_lst -> . names_lst HYPHEN type typed_names_lst
    (19) typed_names_lst -> . names_lst HYPHEN type
    (20) typed_names_lst -> . names_lst
    (86) names_lst -> . NAME names_lst
    (87) names_lst -> . NAME

    NAME            shift and go to state 59

    typed_names_lst                shift and go to state 60
    names_lst                      shift and go to state 58

state 40

    (21) predicates_def -> LPAREN PREDICATES_KEY . predicate_def_lst RPAREN
    (22) predicate_def_lst -> . predicate_def predicate_def_lst
    (23) predicate_def_lst -> . predicate_def
    (24) predicate_def -> . LPAREN NAME typed_variables_lst RPAREN
    (25) predicate_def -> . LPAREN NAME variables_lst RPAREN
    (26) predicate_def -> . LPAREN NAME RPAREN

    LPAREN          shift and go to state 61

    predicate_def_lst              shift and go to state 62
    predicate_def                  shift and go to state 63

state 41

    (17) constants_def -> LPAREN . CONSTANTS_KEY typed_names_lst RPAREN
    (21) predicates_def -> LPAREN . PREDICATES_KEY predicate_def_lst RPAREN

    CONSTANTS_KEY   shift and go to state 39
    PREDICATES_KEY  shift and go to state 40


state 42

    (4) domain -> LPAREN DEFINE_KEY domain_def require_def types_def constants_def . predicates_def action_def_lst RPAREN
    (21) predicates_def -> . LPAREN PREDICATES_KEY predicate_def_lst RPAREN

    LPAREN          shift and go to state 44

    predicates_def                 shift and go to state 64

state 43

    (5) domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def . action_def_lst RPAREN
    (27) action_def_lst -> . action_def action_def_lst
    (28) action_def_lst -> . action_def
    (29) action_def -> . LPAREN ACTION_KEY NAME parameters_def action_def_body RPAREN

    LPAREN          shift and go to state 46

    action_def_lst                 shift and go to state 65
    action_def                     shift and go to state 48

state 44

    (21) predicates_def -> LPAREN . PREDICATES_KEY predicate_def_lst RPAREN

    PREDICATES_KEY  shift and go to state 40


state 45

    (6) domain -> LPAREN DEFINE_KEY domain_def require_def constants_def predicates_def . action_def_lst RPAREN
    (27) action_def_lst -> . action_def action_def_lst
    (28) action_def_lst -> . action_def
    (29) action_def -> . LPAREN ACTION_KEY NAME parameters_def action_def_body RPAREN

    LPAREN          shift and go to state 46

    action_def_lst                 shift and go to state 66
    action_def                     shift and go to state 48

state 46

    (29) action_def -> LPAREN . ACTION_KEY NAME parameters_def action_def_body RPAREN

    ACTION_KEY      shift and go to state 67


state 47

    (7) domain -> LPAREN DEFINE_KEY domain_def require_def predicates_def action_def_lst . RPAREN

    RPAREN          shift and go to state 68


state 48

    (27) action_def_lst -> action_def . action_def_lst
    (28) action_def_lst -> action_def .
    (27) action_def_lst -> . action_def action_def_lst
    (28) action_def_lst -> . action_def
    (29) action_def -> . LPAREN ACTION_KEY NAME parameters_def action_def_body RPAREN

    RPAREN          reduce using rule 28 (action_def_lst -> action_def .)
    LPAREN          shift and go to state 46

    action_def                     shift and go to state 48
    action_def_lst                 shift and go to state 69

state 49

    (95) objects_def -> LPAREN OBJECTS_KEY . typed_constants_lst RPAREN
    (96) objects_def -> LPAREN OBJECTS_KEY . constants_lst RPAREN
    (78) typed_constants_lst -> . constants_lst HYPHEN type typed_constants_lst
    (79) typed_constants_lst -> . constants_lst HYPHEN type
    (82) constants_lst -> . constant constants_lst
    (83) constants_lst -> . constant
    (89) constant -> . NAME

    NAME            shift and go to state 73

    typed_constants_lst            shift and go to state 70
    constants_lst                  shift and go to state 71
    constant                       shift and go to state 72

state 50

    (97) init_def -> LPAREN INIT_KEY . LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (98) init_def -> LPAREN INIT_KEY . ground_predicates_lst RPAREN
    (70) ground_predicates_lst -> . ground_predicate ground_predicates_lst
    (71) ground_predicates_lst -> . ground_predicate
    (76) ground_predicate -> . LPAREN NAME constants_lst RPAREN
    (77) ground_predicate -> . LPAREN NAME RPAREN

    LPAREN          shift and go to state 74

    ground_predicates_lst          shift and go to state 75
    ground_predicate               shift and go to state 76

state 51

    (97) init_def -> LPAREN . INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (98) init_def -> LPAREN . INIT_KEY ground_predicates_lst RPAREN

    INIT_KEY        shift and go to state 50


state 52

    (92) plan_problem -> LPAREN DEFINE_KEY plan_problem_def domain_def objects_def init_def . goal_def RPAREN
    (99) goal_def -> . LPAREN GOAL_KEY LPAREN AND_KEY literals_lst RPAREN RPAREN
    (100) goal_def -> . LPAREN GOAL_KEY literal RPAREN
    (101) goal_def -> . LPAREN GOAL_KEY LPAREN ONEOF_KEY effect_body RPAREN RPAREN

    LPAREN          shift and go to state 53

    goal_def                       shift and go to state 77

state 53

    (99) goal_def -> LPAREN . GOAL_KEY LPAREN AND_KEY literals_lst RPAREN RPAREN
    (100) goal_def -> LPAREN . GOAL_KEY literal RPAREN
    (101) goal_def -> LPAREN . GOAL_KEY LPAREN ONEOF_KEY effect_body RPAREN RPAREN

    GOAL_KEY        shift and go to state 78


state 54

    (93) plan_problem -> LPAREN DEFINE_KEY plan_problem_def domain_def init_def goal_def . RPAREN

    RPAREN          shift and go to state 79


state 55

    (9) require_def -> LPAREN REQUIREMENTS_KEY require_key_lst RPAREN .

    LPAREN          reduce using rule 9 (require_def -> LPAREN REQUIREMENTS_KEY require_key_lst RPAREN .)


state 56

    (10) require_key_lst -> require_key require_key_lst .

    RPAREN          reduce using rule 10 (require_key_lst -> require_key require_key_lst .)


state 57

    (16) types_def -> LPAREN TYPES_KEY typed_names_lst . RPAREN

    RPAREN          shift and go to state 80


state 58

    (18) typed_names_lst -> names_lst . HYPHEN type typed_names_lst
    (19) typed_names_lst -> names_lst . HYPHEN type
    (20) typed_names_lst -> names_lst .

    HYPHEN          shift and go to state 81
    RPAREN          reduce using rule 20 (typed_names_lst -> names_lst .)


state 59

    (86) names_lst -> NAME . names_lst
    (87) names_lst -> NAME .
    (86) names_lst -> . NAME names_lst
    (87) names_lst -> . NAME

    HYPHEN          reduce using rule 87 (names_lst -> NAME .)
    RPAREN          reduce using rule 87 (names_lst -> NAME .)
    NAME            shift and go to state 59

    names_lst                      shift and go to state 82

state 60

    (17) constants_def -> LPAREN CONSTANTS_KEY typed_names_lst . RPAREN

    RPAREN          shift and go to state 83


state 61

    (24) predicate_def -> LPAREN . NAME typed_variables_lst RPAREN
    (25) predicate_def -> LPAREN . NAME variables_lst RPAREN
    (26) predicate_def -> LPAREN . NAME RPAREN

    NAME            shift and go to state 84


state 62

    (21) predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst . RPAREN

    RPAREN          shift and go to state 85


state 63

    (22) predicate_def_lst -> predicate_def . predicate_def_lst
    (23) predicate_def_lst -> predicate_def .
    (22) predicate_def_lst -> . predicate_def predicate_def_lst
    (23) predicate_def_lst -> . predicate_def
    (24) predicate_def -> . LPAREN NAME typed_variables_lst RPAREN
    (25) predicate_def -> . LPAREN NAME variables_lst RPAREN
    (26) predicate_def -> . LPAREN NAME RPAREN

    RPAREN          reduce using rule 23 (predicate_def_lst -> predicate_def .)
    LPAREN          shift and go to state 61

    predicate_def                  shift and go to state 63
    predicate_def_lst              shift and go to state 86

state 64
